fix addbookmark and citations. set dialog button spacing to 1rem

--- a/frontend/src/assets/theme/colors.module.scss
+++ b/frontend/src/assets/theme/colors.module.scss
@@ -22,6 +22,11 @@
    blueAltDark: $uva-blue-alt-A;          // blue-alt-dark
    blueAltDarkest: $uva-blue-alt-B;       // blue-alt-darkest
 
+   green200: $uva-green-200;
+   green100: $uva-green-100;
+   green: $uva-green;
+   greenDark: $uva-green-A;
+
    grey200: $uva-grey-200;                // grey-lightest
    grey100: $uva-grey-100;                // grey-light
    grey50: $uva-grey-50;
