--- a/frontend/src/assets/theme/forms.scss
+++ b/frontend/src/assets/theme/forms.scss
@@ -22,7 +22,7 @@ form.formkit-form {
    align-items: stretch;
    margin: 10px 0 0 0;
    padding: 0;
-   gap: 10px;
+   gap: 1rem;
 }
 
 input[type=color],
