--- a/frontend/src/assets/theme/styleoverrides.scss
+++ b/frontend/src/assets/theme/styleoverrides.scss
@@ -81,7 +81,6 @@ div.p-select-overlay.p-component {
          background: $uva-teal-200;
          border-bottom: 1px solid $uva-teal-100;
          border-radius: 0.3rem 0.3rem 0 0;
-         margin-bottom: 20px;
       }
    }
 }
